# noether

./: .clang-tidy  .cmake-format  .run-clang-format  .travis.yml  Doxyfile  DoxygenLayout.xml  README.md  dependencies.repos  dependencies_ros1.rosinstall  dependencies_ros_melodic.rosinstall  dependencies_ros_noetic.rosinstall
mesh_segmenter/: CMakeLists.txt  colcon.pkg  package.xml
mesh_segmenter/cmake/: mesh_segmenter-config.cmake.in
mesh_segmenter/include/mesh_segmenter/: convex_hull.h  mesh_segmenter.h
mesh_segmenter/src/: convex_hull.cpp  mesh_segmenter.cpp
mesh_segmenter/test/: utest.cpp
noether/: CMakeLists.txt  README.md  package.xml
noether/cmake/: noether-extras.cmake
noether/config/: edge_path_generator.yaml  halfedge_boundary_finder.yaml  mesh_filter_manager.yaml  tool.yaml
noether/include/noether/: noether.h  surface_raster_planner_application.h
noether/launch/: edge_generator_server.launch  halfedge_boundary_finder_server.launch  mesh_filter_server.launch  mesh_segmenter.launch  tool_path_planner_server.launch
noether/src/: convex_hull_node.cpp  edge_generator_server.cpp  halfedge_boundary_finder_server.cpp  mesh_filter_server.cpp  mesh_segmenter_node.cpp  noether.cpp  segmentation_server.cpp  surface_raster_planner_application.cpp  surface_raster_planner_server.cpp  tool_path_planner_server.cpp
noether_conversions/: CMakeLists.txt  package.xml
noether_conversions/cmake/: noether_conversions-extras.cmake
noether_conversions/include/noether_conversions/: noether_conversions.h
noether_conversions/src/: noether_conversions.cpp
noether_conversions/test/: utest.cpp
noether_examples/: CMakeLists.txt  package.xml
noether_examples/cmake/: noether_examples-extras.cmake
noether_examples/config/: edge_generation.rviz  halfedge_finder.rviz  mesh_filtering.rviz  plane_slicer.rviz
noether_examples/data/: raw_mesh.ply  square.pcd
noether_examples/launch/: coverage_sim.launch  edge_path_generation_demo.launch  eigen_value_edge_generator_demo.launch  halfedge_edge_generator_demo.launch  halfedge_finder.launch  halfedge_finder_demo.launch  mesh_filtering_demo.launch  mesh_segmenter_node.launch  mesh_segmenter_server_client.launch  noether.launch  plane_slicer_rastering_generator_demo.launch  rastering_demo.launch  surf_raster_planner_application.launch  surf_raster_planner_demo.launch  surface_walk_rastering_generator_demo.launch  thick_sim.launch
noether_examples/meshes/outputs/: output_0.stl  (+23 more)
noether_examples/src/: coverage_simulator_client.cpp  edge_generator_client.cpp  eigen_value_edge_generator_node.cpp  halfedge_edge_generator_node.cpp  halfedge_finder_node.cpp  mesh_filtering_client.cpp  mesh_segmenter_client.cpp  mesh_segmenter_node.cpp  plane_slicer_raster_generator_node.cpp  rastering_demo_node.cpp  surface_walk_raster_generator_node.cpp  thickness_simulator_client.cpp
noether_filtering/: CMakeLists.txt  README.md  cloud_filter_plugins.xml  colcon.pkg  mesh_filter_plugins.xml  mesh_filters_plugins.xml  package.xml
noether_filtering/cmake/: noether_filtering-config.cmake.in
noether_filtering/src/: filter_group.cpp  filter_manager.cpp  mesh_filter_manager.cpp  plugins.cpp  utils.cpp
noether_gui/: CHANGELOG.rst  CMakeLists.txt  README.md  colcon.pkg  package.xml  resource.qrc
noether_gui/docs/: architecture.drawio
noether_gui/src/: plugin_interface.cpp  plugins.cpp  tpp_app.cpp
noether_gui/ui/: configurable_tpp_pipeline_widget.ui  isometry3d_editor_widget.ui  plugin_loader_widget.ui  quaternation_editor_widget.ui  quaternion_editor_widget.ui  raster_planner_widget.ui  tpp_pipeline_widget.ui  tpp_widget.ui  vector2d_editor_widget.ui  vector3d_editor_widget.ui
noether_msgs/: CMakeLists.txt  package.xml
noether_msgs/action/: ApplyMeshFilters.action  GenerateEdgePaths.action  GenerateToolPaths.action  Segment.action  SimulateCoverage.action  SimulateThickness.action
noether_msgs/msg/: EigenValueEdgeGeneratorConfig.msg  FilteringConfig.msg  HalfedgeEdgeGeneratorConfig.msg  HeatRasterGeneratorConfig.msg  PlaneSlicerRasterGeneratorConfig.msg  SegmentationConfig.msg  SurfaceWalkRasterGeneratorConfig.msg  ToolPathConfig.msg  ToolPaths.msg  ToolRasterPath.msg
noether_msgs/srv/: GenerateConvexHull.srv
noether_simulator/: CMakeLists.txt  package.xml
noether_simulator/cfg/: NoetherSimulator.cfg
noether_simulator/src/: coverage_simulator_node.cpp  noether_simulator.cpp  thickness_simulator_node.cpp
noether_simulator/test/: utest.cpp
noether_tpp/: CHANGELOG.rst  CMakeLists.txt  README.md  colcon.pkg  package.xml
noether_tpp/cmake/: noether_tpp-config.cmake.in
noether_tpp/core/: CMakeLists.txt  mesh_modifier.h  pipeline.h  tool_path_modifier.h  tool_path_planner.h  types.h
noether_tpp/src/: generate_mesh_primitive.cpp  plugin_interface.cpp  plugins.cpp  splines.cpp  utils.cpp
noether_tpp/test/: CMakeLists.txt  mesh_modifier_utest.cpp  tool_path_modifier_utest.cpp  tool_path_planner_utest.cpp  utils.h
noether_tpp/tool_path_modifiers/: CMakeLists.txt
noether_tpp/tool_path_planners/: CMakeLists.txt
path_sequence_planner/: CMakeLists.txt  colcon.pkg  package.xml
path_sequence_planner/cmake/: path_sequence_planner-config.cmake.in
path_sequence_planner/src/: path_sequence_planner.cpp  simple_path_sequence_planner.cpp
path_sequence_planner/test/: utest.cpp
tool_path_planner/: CMakeLists.txt  colcon.pkg  package.xml
tool_path_planner/cmake/: CMakeLists.txt.in  tool_path_planner-config.cmake.in
tool_path_planner/src/: ceres_tool_path_planner.cpp  edge_path_generator.cpp  eigen_value_edge_generator.cpp  halfedge_boundary_finder.cpp  halfedge_edge_generator.cpp  plane_slicer_raster_generator.cpp  raster_path_generator.cpp  raster_tool_path_planner.cpp  surface_walk_raster_generator.cpp  test_segment_axes.cpp  tool_path_planner.cpp  utilities.cpp
tool_path_planner/test/: utest.cpp
vtk_viewer/: CMakeLists.txt  colcon.pkg  package.xml
vtk_viewer/cmake/: vtk_viewer-config.cmake.in
vtk_viewer/src/: mouse_interactor.cpp  vtk_utils.cpp  vtk_viewer.cpp
vtk_viewer/test/: CMakeLists.txt  utest.cpp
(+443 files in other folders)
