<?xml version="1.0"?>
<package format="2">
  <name>mesh_segmenter</name>
  <version>0.0.0</version>
  <description>The mesh_segmenter package</description>
  <maintainer email="alex.goins@swri.org">alex</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>vtk_viewer</test_depend>

</package>
