<?xml version="1.0"?>
<package format="2">
  <name>mesh_segmenter</name>
  <version>0.0.0</version>
  <description>The mesh_segmenter package</description>
 <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>vtk_viewer</depend>

</package>
