<?xml version="1.0"?>
<package>
  <name>noether</name>
  <version>0.0.0</version>
  <description>The noether package</description>
  <maintainer email="alex.goins@swri.org">alex</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>mesh_segmenter</build_depend>
  <build_depend>tool_path_planner</build_depend>
  <build_depend>path_sequence_planner</build_depend>
  <build_depend>vtk_viewer</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>mesh_segmenter</run_depend>
  <run_depend>tool_path_planner</run_depend>
  <run_depend>path_sequence_planner</run_depend>
  <run_depend>vtk_viewer</run_depend>

</package>
