<?xml version="1.0"?>
<package format="2">
  <name>noether</name>
  <version>0.0.0</version>
  <description>The noether package</description>
  <author email="alex.goins@swri.org">alex</author>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>
  <depend>pcl_conversions</depend>
  <depend>mesh_segmenter</depend>
  <depend>tool_path_planner</depend>
  <depend>path_sequence_planner</depend>
  <depend>vtk_viewer</depend>
  <depend>noether_msgs</depend>
  <depend>actionlib</depend>
  <depend>noether_conversions</depend>
  <depend>noether_filtering</depend>

</package>
