<?xml version="1.0"?>
<package format="2">
  <name>noether_conversions</name>
  <version>0.0.0</version>
  <description>The noether_conversions package</description>
  <maintainer email="Austin.Deric@swri.org">alex</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tool_path_planner</depend>
  <depend>tf</depend>
</package>
