<?xml version="1.0"?>
<package format="2">
  <name>noether_conversions</name>
  <version>0.0.0</version>
  <description>The noether_conversions package</description>
  <maintainer email="Austin.Deric@swri.org">alex</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
</package>
