<?xml version="1.0"?>
<package format="2">
  <name>noether_examples</name>
  <version>0.0.0</version>
  <description>The noether package</description>
  <maintainer email="alex.goins@swri.org">alex</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>noether_conversions</build_depend>

  <depend>actionlib</depend>
  <depend>mesh_segmenter</depend>
  <depend>noether_msgs</depend>
  <depend>path_sequence_planner</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tool_path_planner</depend>
  <depend>vtk_viewer</depend>

</package>
